# priests

./: AGENTS.md  CHANGELOG.md  DEVLOG.md  README.md  TODO.md  pyproject.toml
priests/: engine_factory.py  provider_status.py  registry.py  search.py
priests/cli/: config_cmd.py  init_cmd.py  main.py  model_cmd.py  profile_cmd.py  provider_cmd.py  providers_cmd.py  run_cmd.py  service_cmd.py
priests/config/: loader.py  model.py
priests/memory/: extractor.py
priests/profile/: config.py
priests/providers/: __init__.py  chatgpt_auth.py  github_copilot_auth.py  github_copilot_provider.py
priests/service/: app.py  schemas.py
priests/service/routes/: config.py  health.py  profiles.py  run.py  sessions.py  ui.py  uploads.py
priests/ui/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
priests/ui/src/: App.tsx  ConfigPage.tsx  api.ts  index.css  main.tsx
scripts/: memory_eval.py
tests/: bench_memory.py  test_config.py  test_engine_factory.py  test_memory.py  test_memory_update.py  test_model_cmd.py  test_provider_cmd.py  test_run_cmd.py  test_service.py
