[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "priests"
version = "0.21.0"
description = "CLI tool and HTTP service for priest AI orchestration"
requires-python = ">=3.11"
dependencies = [
    "priest-core>=2.3.0",
    "typer>=0.12",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "tomli-w>=1.0",
    "rich>=13.0",
    "anyio>=4.0",
    "httpx>=0.27",
    "questionary>=2.0",
    "openai>=2.30.0",
    "ddgs>=9.14.0",
    "pillow>=10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=5.2.3",
]

[project.scripts]
priests = "priests.cli.main:app"

[tool.hatch.build.targets.sdist.force-include]
"priests/ui/dist" = "priests/ui/dist"

[tool.hatch.build.targets.wheel]
packages = ["priests"]
exclude = ["priests/ui/node_modules"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

# Local dev only — remove this section when developing without a sibling priest checkout.
# PyPI resolves priest-core>=2.3.0 automatically when this block is absent.
[tool.uv.sources]
priest-core = { path = "../priest", editable = true }
